--- a/src/sass/_pages.scss
+++ b/src/sass/_pages.scss
@@ -1472,3 +1472,107 @@
 	display: none;
 	visibility: hidden;
 }
+
+.compare-list {
+	overflow-x: auto;
+	max-width: 100%;
+	margin-bottom: 40px;
+	white-space: nowrap;
+}
+.compare-item {
+	display: inline-block;
+	vertical-align: top;
+	position: relative;
+	width: 364.33px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	background: #FFF;
+	padding: 15px;
+	white-space: normal;
+
+	&-rate {
+		position: absolute;
+		right: 15px;
+		top: 15px;
+		height: 30px;
+		line-height: 32px;
+	}
+	&-img {
+		margin-bottom: 20px;
+		height: 240px;
+		
+		img {
+			display: block;
+			margin: 0 auto;
+			max-height: 240px;
+		}
+	}
+	&-title {
+		@include fz(18);
+		font-weight: 700;
+		margin-bottom: 5px;
+
+		a {
+			color: $titles;
+
+			&:hover {
+				color: $primary;
+			}
+		}
+	}
+	&-price {
+		@include fz(16);
+		font-weight: 700;
+		margin-bottom: 16px;
+		color: $titles;
+	}
+	&-purposes {
+		margin-bottom: 20px;
+		position: relative;
+
+		&-btn {
+			margin-bottom: 0;
+			padding: 0px 15px;
+
+			&:after {
+				content: "";
+				display: inline-block;
+				vertical-align: middle;
+				margin-left: 5px;
+				width: 0;
+				height: 0;
+				border-style: solid;
+				border-width: 4px 3px 0 3px;
+				border-color: #FFF transparent transparent transparent;
+			}
+		}
+		&-drop {
+			visibility: hidden;
+			opacity: 0;
+			transform: translate3d(0, 10px, 0);
+			position: absolute;
+			top: 100%;
+			left: 0px;
+			right: 0;
+			background: #FFF;
+			max-height: 300px;
+			overflow-y: auto;
+			border: 1px solid #eee;
+			box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.1);
+			z-index: 99;
+			transition: visibility .15s, opacity .15s, transform .25s;
+			text-align: center;
+
+			&.opened {
+				visibility: visible;
+				opacity: 1;
+				transform: translate3d(0, 0px, 0);
+			}
+		}
+	}
+	&-characters {
+		padding-bottom: 8px;
+		margin-bottom: 15px;
+		border-bottom: 1px solid $border;
+	}
+}
