--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -1377,7 +1377,7 @@ input[type="reset"].block {
 	width: 12px;
 	height: 12px;
 	margin: 4px 0 0 4px;
-	background: $secondary;
+	background: $primary;
 	// @include transform(scale(1));
 }
 
