--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1234,6 +1234,8 @@ footer.footer { background: #323232; padding: 15px 0 0; color: #FFF; }
   .card-wrapper { position: relative; }
   .card-tabs { margin: 0; position: sticky; top: 60px; left: 0; z-index: 99; background: #FFF; } }
 
+.card-tags { padding-top: 25px; }
+
 /* MFP
 ---------------------------*/
 .black-popup { background: #858585; }
