--- a/src/css/style.css
+++ b/src/css/style.css
@@ -638,7 +638,7 @@ header.header a { color: #FFF; }
 
 header.header a:hover { color: #FF6025; }
 
-header.header.fixed { position: fixed; top: -60px; left: 0; right: 0; z-index: 199; }
+header.header.fixed { position: fixed; top: -60px; left: 0; right: 0; z-index: 199; max-width: 100vw; }
 
 .header-flex { min-height: 60px; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 
@@ -650,7 +650,7 @@ header.header.fixed { position: fixed; top: -60px; left: 0; right: 0; z-index: 1
 
 .header-menu { font-size: 14px; font-size: 0.875rem; flex: 0 0 100%; max-width: 100%; position: relative; z-index: 1; }
 
-.header-menu:after { content: ""; z-index: -1; position: absolute; left: -1000px; right: -1000px; top: 0; bottom: 0; background: #2d2d2d; }
+.header-menu:after { content: ""; z-index: -1; position: absolute; left: -1000px; right: -1000px; top: 0; bottom: 0; background: #2d2d2d; max-width: 100vw; }
 
 .main-menu ul { font-size: 0; }
 
@@ -678,7 +678,7 @@ footer.footer { background: #323232; padding: 15px 0 0; color: #FFF; }
 
 .footer-menu { text-align: center; order: 1; flex: 0 0 100%; margin-top: 15px; position: relative; z-index: 1; }
 
-.footer-menu:after { content: ""; z-index: -1; position: absolute; left: -1000px; right: -1000px; top: 0; bottom: 0; background: #2d2d2d; }
+.footer-menu:after { content: ""; z-index: -1; position: absolute; left: -1000px; right: -1000px; top: 0; bottom: 0; background: #2d2d2d; max-width: 100vw; }
 
 .footer-menu li { display: inline-block; vertical-align: middle; margin: 0px 10px; }
 
@@ -1230,11 +1230,26 @@ footer.footer { background: #323232; padding: 15px 0 0; color: #FFF; }
 
 .card-cols { margin-bottom: 0; }
 
-@media (min-width: 768px) { #wrapper.wrapper-sticky, .wrapper-sticky { overflow: unset; }
-  .card-wrapper { position: relative; }
-  .card-tabs { margin: 0; position: sticky; top: 60px; left: 0; z-index: 99; background: #FFF; } }
-
 .card-tags { padding-top: 25px; }
+
+#wrapper.wrapper-sticky, .wrapper-sticky { overflow: unset; }
+
+.card-wrapper { position: relative; }
+
+.card-tabs { margin: 0; position: sticky; top: 60px; left: 0; z-index: 99; background: #FFF; overflow-x: auto; }
+
+.m-filters-toggler { display: none; visibility: hidden; position: absolute; right: 0; top: 1px; height: 30px; line-height: 28px; border: 1px solid #FF6025; padding: 0px 15px; color: #FF6025; cursor: pointer; }
+
+.m-filters-close { display: none; visibility: hidden; position: fixed; left: 265px; top: 20px; height: 30px; width: 30px; border-radius: 50%; font-size: 0; text-indent: -9999px; color: #FF6025; background: #FFF url(../images/close.svg) center no-repeat; background-size: 16px; z-index: 309; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); cursor: pointer; }
+
+@media (max-width: 992px) { .catalog-sorting { position: relative; padding-right: 100px; }
+  .m-filters-toggler { display: inline-block; visibility: visible; }
+  div.col-catalog-filters, aside.col-catalog-filters { position: fixed; width: 280px; top: 0; bottom: 0; left: 0; transform: translate3d(-292px, 0, 0); transition: transform .4s; z-index: 299; padding-left: 0; padding-right: 0; padding-bottom: 40px; overflow-y: auto; -webkit-overflow-scrolling: touch; box-shadow: 0px 0 10px 0px rgba(0, 0, 0, 0.42); background: #FFF; }
+  div.col-catalog-filters.opened, aside.col-catalog-filters.opened { transform: translate3d(0px, 0, 0); }
+  div.col-catalog-filters .filters, aside.col-catalog-filters .filters { margin-bottom: 0; }
+  .m-filters-close.opened { display: block; visibility: visible; } }
+
+@media (max-width: 480px) { .catalog-sorting-label { display: none; } }
 
 /* MFP
 ---------------------------*/
@@ -1495,7 +1510,7 @@ RESPONSIVE STYLES ----------------------- */
   .card-snippet .card-info { padding-right: 15px; }
   .filters-group { padding: 30px 20px; }
   .card { padding: 30px; }
-  .card-tabs { margin-left: 0; margin-right: 0; padding-left: 0; padding-right: 0; }
+  .card-tabs { margin-left: 0; margin-right: 0; padding-left: 20px; padding-right: 0; }
   .card-tabs a { font-size: 14px; margin-right: 20px; } }
 
 @media (max-width: 992px) { .compare-item { width: 280px; margin-right: 15px; margin-bottom: 15px; }
@@ -1535,11 +1550,8 @@ RESPONSIVE STYLES ----------------------- */
   .card .card-store { margin-bottom: 0; }
   .card .card-store .label-styler { position: absolute; right: 20px; top: 282px; }
   .card .card-cols { margin-bottom: 30px; padding-bottom: 0; }
-  .card-tabs { white-space: normal; }
-  .card-tabs a { display: block; border-top: 1px solid #eee; color: #323232; font-size: 16px; margin-right: 0; padding: 14px 15px 14px 15px; }
-  .card-tabs a.active { color: #323232; font-weight: 400; }
-  .card-tabs a:after { content: none; }
-  .card-tabs a:before { content: ""; position: absolute; left: 0; top: 50%; margin-top: -6px; width: 6px; height: 12px; background: url(../images/svg/arrow-right.svg) center no-repeat; background-size: contain; }
+  .card-tabs { padding-left: 15px; top: 40px; }
+  .card-tabs a.active { font-weight: 400; }
   .card-purposes-item.mobile-only { display: block; } }
 
 @media (max-width: 576px) { .card { padding: 0; background: none; }
@@ -1587,7 +1599,8 @@ RESPONSIVE STYLES ----------------------- */
   .ui-toggled.opened { max-height: none; }
   .ui-toggled.opened .ui-toggled-toggler:before { content: none; }
   .ui-toggled-toggler { display: inline-block; visibility: visible; color: #FF6025; background: #F9F9F9; padding: 2px 0; cursor: pointer; position: absolute; right: 0; bottom: -3px; }
-  .ui-toggled-toggler:before { content: ""; position: absolute; right: 100%; top: 0; bottom: 0; width: 250px; background: linear-gradient(270deg, #F9F9F9 40%, rgba(249, 249, 249, 0) 100%); } }
+  .ui-toggled-toggler:before { content: ""; position: absolute; right: 100%; top: 0; bottom: 0; width: 250px; background: linear-gradient(270deg, #F9F9F9 40%, rgba(249, 249, 249, 0) 100%); }
+  .card-info { padding-right: 0; margin-bottom: 20px; } }
 
 @media (max-width: 480px) { .card-item .card-img { max-height: 180px; }
   .card-item .card-img img { max-height: 180px; }
