--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -17,6 +17,7 @@ header.header {
 		left: 0;
 		right: 0;
 		z-index: 199;
+		max-width: 100vw;
 	}
 }
 .header-flex {
@@ -48,7 +49,6 @@ header.header {
 	position: relative;
 	z-index: 1;
 
-
 	&:after {
     content: "";
     z-index: -1;
@@ -57,7 +57,8 @@ header.header {
     right: -1000px;
     top: 0;
     bottom: 0;
-    background: #2d2d2d;
+		background: #2d2d2d;
+		max-width: 100vw;
   }
 }
 .main-menu {
